--- a/content/econ03ge3a/growth-record-of-indian-economy.html
+++ b/content/econ03ge3a/growth-record-of-indian-economy.html
@@ -11,6 +11,8 @@ output: html_document
 <h2>Reference</h2>
 <p><a href="rakesh-mohan.pdf">Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment</a></p>
 </div>
+<div id="summary-of-the-paper." class="section level1">
+<h1>Summary of the paper.</h1>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
 <ul>
@@ -196,4 +198,5 @@ Barring the decade of the 1970s, the incremental capital output ratio has hovere
 <ul>
 <li>What have we learned from this review of Indian economic growth and macroeconomic management over the past 50-60 years?</li>
 </ul>
+</div>
 </div>
