--- a/public/econ03ge3a/growth-record-of-indian-economy/index.html
+++ b/public/econ03ge3a/growth-record-of-indian-economy/index.html
@@ -66,7 +66,7 @@
 
 <div id="reference" class="section level2">
 <h2>Reference</h2>
-<p><a href="rakesh-mohan.pdf">Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment</a></p>
+<p><a href="rakesh-mohan.pdf">Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment</a> by <strong>Rakesh Mohan, 2008</strong>, Economic and Political Weekly.</p>
 </div>
 <div id="summary-of-the-paper." class="section level1">
 <h1>Summary of the paper.</h1>
