--- a/content/econ03ge3a/Integrating-growth-and-development.html
+++ b/content/econ03ge3a/Integrating-growth-and-development.html
@@ -12,13 +12,19 @@ output: html_document
 <ul>
 <li><a href="http://gen.lib.rus.ec/book/index.php?md5=9C29C2843AB83648C8FD29E8EE824AF6">An Uncertain Glory: India and its contradictions</a> by Jean Drèze and Amartya Sen, 2013. Chapter 2.</li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/juT0HZJ6ako" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O8-sR1AQBaM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Eahtq2wz9ls" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </div>
 <div id="a-short-history-of-fast-growth" class="section level2">
 <h2>A short history of fast growth</h2>
 <ul>
 <li>How long a history of fast economic growth does India have?</li>
 <li>There are many more signs of life in the Indian economy today than could be seen when political independence was granted to the ancient land in 1947, after which its straitlaced economy moved at a resiliently slow pace – about 3.5per cent per year – for nearly three decades. It was sometimes called ‘the Hindu rate of growth’, even though Hinduism had nothing to do with it – public policy had.</li>
-<li>since Indian GDP preceding independence was mainly stagnant and sometimes declining, even economic growth of 3.5 per cent per annum in the decades immediately following independence was, in fact, a big leap upwards.</li>
+<li>since Indian GDP preceding independence was mainly stagnant and sometimes declining, even economic growth of 3.5 per cent per annum in the decades immediately following independence was, in fact, a big leap upwar ds.</li>
 <li>But the fact remains that 3.5 per cent per year (translating, at that time, into something like 1.5 per cent per year in per capita terms) is painfully slow for the purpose of rapid development and poverty reduction. The modesty of Indian economic growth, which lasted from the 1950s through the 1970s, gave way to considerable quickening in the 1980s, with a higher rate of expansion at 5 per cent per year.</li>
 <li>The robustness of high growth in India is undoubtedly connected with the economic reforms of the 1990s, which have built a solid foundation for continuing economic growth. After hovering between 5 and 6 per cent, the growth rate took a further hike upwards to 7 per cent and then further up, even crossing 9 per cent for several years (between 2005 and 2008).</li>
 <li>India’s real income per head is still lower than that of most countries outside sub-Saharan Africa. The picture is even worse if we focus on the quality of life of the underprivileged part of the Indian population, hundreds of millions of whom continue to lack the essential requirements of satisfactory living, from nutritious food to health care, decent work conditions, and warm clothes in the winter. Growth alone is unlikely to end these problems, at least not within a reasonable time frame, but it is certainly much easier to remedy such deficiencies in a growing economy.</li>
