--- a/public/econ03ge3a/a-new-india/index.html
+++ b/public/econ03ge3a/a-new-india/index.html
@@ -70,6 +70,8 @@
 <li><a href="http://gen.lib.rus.ec/book/index.php?md5=9C29C2843AB83648C8FD29E8EE824AF6">An Uncertain Glory: India and its contradictions</a> by Jean Drèze and Amartya Sen, 2013. Chapter 1.</li>
 </ul>
 <hr />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/t_8-undxXJk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </div>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
