--- a/content/econ03ge3a/The-Recovery-of-India.html
+++ b/content/econ03ge3a/The-Recovery-of-India.html
@@ -14,6 +14,16 @@ output: html_document
 <li><a href="https://core.ac.uk/download/pdf/19918818.pdf">Visible Hand: Public Policy and Economic Growth in the Nehru Era</a></li>
 <li><a href="https://www.jstor.org/stable/40276833?seq=1#page_scan_tab_contents">The Recovery of India</a></li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/K0t9PrHazYQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cAKzhx9yFgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TZjfLPWI-ZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ps7iEGLyTdc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xzBr1562LC4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </div>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
