--- a/public/students-enrolled/index.html
+++ b/public/students-enrolled/index.html
@@ -64,7 +64,7 @@
       
 
 
-<p>Students currently enrolled = 37. Last updated 31-Oct-2020, 09:14:02.</p>
+<p>Students currently enrolled = 38. Last updated 01-Dec-2020, 12:34:57.</p>
 <div style="width:800px;line-height:3em;overflow:scroll;padding:5px;">
 <table>
 <colgroup>
@@ -458,6 +458,16 @@
 <td align="left">Mathematics</td>
 <td align="left"><a href="mailto:soumyadeepc0@gmail.com" class="email">soumyadeepc0@gmail.com</a></td>
 <td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19103110027</td>
+<td align="left">27</td>
+<td align="left">ARITRA BANERJEE</td>
+<td align="left">English</td>
+<td align="left"><a href="mailto:jit.banerjee44@gmail.com" class="email">jit.banerjee44@gmail.com</a></td>
+<td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
 </tbody>
