--- a/content/econ03ge3a/growth-record-of-indian-economy.html
+++ b/content/econ03ge3a/growth-record-of-indian-economy.html
@@ -10,6 +10,18 @@ output: html_document
 <div id="reference" class="section level2">
 <h2>Reference</h2>
 <p><a href="rakesh-mohan.pdf">Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment</a> by <strong>Rakesh Mohan, 2008</strong>, Economic and Political Weekly.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ofJDuS-Uc1o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nIgaigiXpJU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kSbG5vOXk84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MMIli84JvDI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/J_NVE1wSe_8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4gTxdeJQQsI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </div>
 <div id="summary-of-the-paper." class="section level1">
 <h1>Summary of the paper.</h1>
