--- a/public/announcement/index.html
+++ b/public/announcement/index.html
@@ -61,7 +61,14 @@
     
 
     <div class="article-content">
-      <p>There are no announcements as of now.</p>
+      <p>You will have a time bound written IA exam on Thursday 28 Jan 2021 during class hours i.e. 10 - 12 noon. It will be of 30 marks.</p>
+<p>Syllabus:</p>
+<ol>
+<li>Indian Economy on the Eve of Independence</li>
+<li>A New India?</li>
+<li>Integrating Growth and Development</li>
+</ol>
+<p>You shall get questions of 5 and 10 marks. No MCQ</p>
 
     </div>
   </article>
