--- a/public/announcement/index.html
+++ b/public/announcement/index.html
@@ -61,14 +61,7 @@
     
 
     <div class="article-content">
-      <p>You will have a time bound written IA exam on Thursday 28 Jan 2021 during class hours i.e. 10 - 12 noon. It will be of 30 marks.</p>
-<p>Syllabus:</p>
-<ol>
-<li>Indian Economy on the Eve of Independence</li>
-<li>A New India?</li>
-<li>Integrating Growth and Development</li>
-</ol>
-<p>You shall get questions of 5 and 10 marks. No MCQ</p>
+      <p><a href="ge_students-2020.csv">Click here</a> for topics for assignments. Submission deadline 28 January 2021. Your submissions shall go for plagiarism check. A high plagiarism i.e. above 15% shall result in rejection of your submission.</p>
 
     </div>
   </article>
