--- a/public/announcement/index.html
+++ b/public/announcement/index.html
@@ -61,7 +61,13 @@
     
 
     <div class="article-content">
-      <p><a href="ge_students-2020.csv">Click here</a> for topics for assignments. Submission deadline 28 January 2021. Your submissions shall go for plagiarism check. A high plagiarism i.e. above 15% shall result in rejection of your submission.</p>
+      <p><a href="ge_students-2020.csv">Click here</a> for topics for assignments.</p>
+<ul>
+<li>Submission deadline 28 January 2021. Your submissions shall go for plagiarism check. A high plagiarism i.e. above 15% shall result in rejection of your submission. You need not submit any plagiarism report along with the assignment.</li>
+<li>Word limit 2500-3000 words. The essay must be to the point and related to the topic.</li>
+<li>No specific format for writing your assignments.</li>
+<li>Make your submission at <a href="mailto:pravesh.econ@presiuniv.ac.in">pravesh.econ@presiuniv.ac.in</a>.</li>
+</ul>
 
     </div>
   </article>
