--- a/public/students-enrolled/index.html
+++ b/public/students-enrolled/index.html
@@ -64,17 +64,17 @@
       
 
 
-<p>Students currently enrolled = 38. Last updated 07-Jan-2021, 11:58:10.</p>
+<p>Students currently enrolled = 7. Last updated 23-Aug-2021, 19:03:02.</p>
 <div style="width:800px;line-height:3em;overflow:scroll;padding:5px;">
-<table>
+<table style="width:100%;">
 <colgroup>
 <col width="3%" />
-<col width="9%" />
-<col width="7%" />
-<col width="19%" />
-<col width="14%" />
-<col width="26%" />
-<col width="9%" />
+<col width="10%" />
+<col width="3%" />
+<col width="20%" />
+<col width="16%" />
+<col width="25%" />
+<col width="10%" />
 <col width="9%" />
 </colgroup>
 <thead>
@@ -92,381 +92,71 @@
 <tbody>
 <tr class="odd">
 <td align="left">3</td>
-<td align="left">19218170115</td>
-<td align="left">BIOS115</td>
-<td align="left">KALLOL BHOWMIK</td>
-<td align="left">Life Sciences</td>
-<td align="left"><a href="mailto:kallolnclr2001@gmail.com" class="email">kallolnclr2001@gmail.com</a></td>
-<td align="left">BIOS03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19104210008</td>
-<td align="left">POLS008</td>
-<td align="left">RAKA BARMAN</td>
+<td align="left">20104110040</td>
+<td align="left">40</td>
+<td align="left">RISHABH CHOWDHARY</td>
 <td align="left">Political Science</td>
-<td align="left"><a href="mailto:rakabarman11@gmail.com" class="email">rakabarman11@gmail.com</a></td>
+<td align="left"><a href="mailto:chowdharyrishabhh@gmail.com" class="email">chowdharyrishabhh@gmail.com</a></td>
 <td align="left">POLS03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19103210009</td>
-<td align="left">ENGL009</td>
-<td align="left">DEBOSMITA DUTTA</td>
-<td align="left">English</td>
-<td align="left"><a href="mailto:duttadebosmita2001@gmail.com" class="email">duttadebosmita2001@gmail.com</a></td>
-<td align="left">ENGL03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
 <tr class="even">
 <td align="left">3</td>
-<td align="left">19104110009</td>
-<td align="left">POLS009</td>
-<td align="left">RATNADEEP MAITRA</td>
+<td align="left">20212260013</td>
+<td align="left">13</td>
+<td align="left">LARAIB GOHAR</td>
+<td align="left">Geography</td>
+<td align="left"><a href="mailto:laraib1414114@gmail.com" class="email">laraib1414114@gmail.com</a></td>
+<td align="left">GEOG03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">20104110014</td>
+<td align="left">14</td>
+<td align="left">ANIRUDDHA MUKHOPADHYAY</td>
 <td align="left">Political Science</td>
-<td align="left"><a href="mailto:ratnadeepmaitra72@gmail.com" class="email">ratnadeepmaitra72@gmail.com</a></td>
+<td align="left"><a href="mailto:writeraniruddha6@gmail.com" class="email">writeraniruddha6@gmail.com</a></td>
 <td align="left">POLS03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213210021</td>
-<td align="left">MATH021</td>
-<td align="left">ANISHA CHOWDHURY</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:anishachowdhury33@gmail.com" class="email">anishachowdhury33@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
 <tr class="even">
 <td align="left">3</td>
-<td align="left">19214130023</td>
-<td align="left">STAT023</td>
-<td align="left">ARJUN BADAL KISKU</td>
-<td align="left">Statistics</td>
-<td align="left"><a href="mailto:arjunbadalkisku@gmail.com" class="email">arjunbadalkisku@gmail.com</a></td>
-<td align="left">STAT03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19218110024</td>
-<td align="left">BIOS024</td>
-<td align="left">YUGARSHI ROY</td>
-<td align="left">Life Sciences</td>
-<td align="left"><a href="mailto:yugarshi123@gmail.com" class="email">yugarshi123@gmail.com</a></td>
-<td align="left">BIOS03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19212170012</td>
-<td align="left">GEOG012</td>
-<td align="left">ANOMITRA DAS</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:das.anomitra2001@gmail.com" class="email">das.anomitra2001@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213120055</td>
-<td align="left">MATH055</td>
-<td align="left">PRITAM ROY</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:pritamroy1203@gmail.com" class="email">pritamroy1203@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19212110010</td>
-<td align="left">GEOG010</td>
-<td align="left">ANIK BISWAS</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:ab.biswas.anik@gmail.com" class="email">ab.biswas.anik@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19212160011</td>
-<td align="left">GEOG011</td>
-<td align="left">ROHAN ALI MALLICK</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:rohan.en.2017@gmail.com" class="email">rohan.en.2017@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19212210007</td>
-<td align="left">GEOG007</td>
-<td align="left">JOYETA SARKAR</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:darpita340@gmail.com" class="email">darpita340@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19106210016</td>
-<td align="left">HIST016</td>
-<td align="left">ISHIKA MITRA</td>
-<td align="left">History</td>
-<td align="left"><a href="mailto:brishtiishikamitra@gmail.com" class="email">brishtiishikamitra@gmail.com</a></td>
-<td align="left">HIST03SEC1A</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19212130018</td>
-<td align="left">GEOG018</td>
-<td align="left">BAIBHAV SHAW</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:shaw.baibhav73@gmail.com" class="email">shaw.baibhav73@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19212270008</td>
-<td align="left">GEOG008</td>
-<td align="left">TIYASHA GHOSH</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:ghoshtiyasha911@gmail.com" class="email">ghoshtiyasha911@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19212110032</td>
-<td align="left">GEOG032</td>
-<td align="left">MANISH NANDI</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:manishnandi6@gmail.com" class="email">manishnandi6@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19218220103</td>
-<td align="left">BIOS103</td>
-<td align="left">SAYANI MISTRY</td>
-<td align="left">Life Sciences</td>
-<td align="left"><a href="mailto:sayani4us@gmail.com" class="email">sayani4us@gmail.com</a></td>
-<td align="left">BIOS03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19212210001</td>
-<td align="left">GEOG001</td>
-<td align="left">NANDITA PAUL</td>
-<td align="left">Geography</td>
-<td align="left"><a href="mailto:paulnandita2001@gmail.com" class="email">paulnandita2001@gmail.com</a></td>
-<td align="left">GEOG03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19106210022</td>
-<td align="left">HIST022</td>
-<td align="left">RITI BANERJEE</td>
-<td align="left">History</td>
-<td align="left"><a href="mailto:ritibanerj@gmail.com" class="email">ritibanerj@gmail.com</a></td>
-<td align="left">HIST03SEC1A</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19103110008</td>
-<td align="left">ENGL008</td>
-<td align="left">SPARSHA BARMAN</td>
+<td align="left">20103120005</td>
+<td align="left">05</td>
+<td align="left">MANABENDRA ROY</td>
 <td align="left">English</td>
-<td align="left"><a href="mailto:sparshabarman.presi@gmail.com" class="email">sparshabarman.presi@gmail.com</a></td>
+<td align="left"><a href="mailto:manabendraroy196@gmail.com" class="email">manabendraroy196@gmail.com</a></td>
 <td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
 <tr class="odd">
 <td align="left">3</td>
-<td align="left">19213110011</td>
-<td align="left">Math011</td>
-<td align="left">PRITHIBI MONDAL</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:prithibimondal75@gmail.com" class="email">prithibimondal75@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
+<td align="left">20105210035</td>
+<td align="left">35</td>
+<td align="left">ANAMIKA MISHRA</td>
+<td align="left">Sociology</td>
+<td align="left"><a href="mailto:mishraanamika486@gmail.com" class="email">mishraanamika486@gmail.com</a></td>
+<td align="left">SOCL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
 <tr class="even">
 <td align="left">3</td>
-<td align="left">19218210043</td>
-<td align="left">BIOS 043</td>
-<td align="left">SHUBHANGI CHATTERJEE</td>
-<td align="left">Life Sciences</td>
-<td align="left"><a href="mailto:shubhangichatterjee2k@gmail.com" class="email">shubhangichatterjee2k@gmail.com</a></td>
-<td align="left">BIOS03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
+<td align="left">20104210003</td>
 <td align="left">3</td>
-<td align="left">19218120071</td>
-<td align="left">BIOS071</td>
-<td align="left">PRIYOJIT DAS</td>
-<td align="left">Life Sciences</td>
-<td align="left"><a href="mailto:Priyo3185@gmail.com" class="email">Priyo3185@gmail.com</a></td>
-<td align="left">BIOS03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19104110027</td>
-<td align="left">POLS027</td>
-<td align="left">FARHAN ALI JAFRI</td>
+<td align="left">SAYANTANI DAS</td>
 <td align="left">Political Science</td>
-<td align="left"><a href="mailto:farhanjafri11@gmail.com" class="email">farhanjafri11@gmail.com</a></td>
+<td align="left"><a href="mailto:biplabsayantani07@gmail.com" class="email">biplabsayantani07@gmail.com</a></td>
 <td align="left">POLS03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
 <tr class="odd">
 <td align="left">3</td>
-<td align="left">19213160029</td>
-<td align="left">MATH29</td>
-<td align="left">MD NURUL ISLAM</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:mohdnurulislam99@gmail.com" class="email">mohdnurulislam99@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19103210033</td>
-<td align="left">ENGL033</td>
-<td align="left">BARSHANA BANERJEE</td>
+<td align="left">20103210053</td>
+<td align="left">53</td>
+<td align="left">AAHELI CHAKRABORTY</td>
 <td align="left">English</td>
-<td align="left"><a href="mailto:banerjeebarshana7@gmail.com" class="email">banerjeebarshana7@gmail.com</a></td>
-<td align="left">ENGL03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213260014</td>
-<td align="left">MATH014</td>
-<td align="left">SARMIN SABNAM</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:sarminsabnam53@gmail.com" class="email">sarminsabnam53@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19104130030</td>
-<td align="left">POLS030</td>
-<td align="left">ABHIRAJ EKKA</td>
-<td align="left">Political Science</td>
-<td align="left"><a href="mailto:abhirajekka2000@gmail.com" class="email">abhirajekka2000@gmail.com</a></td>
-<td align="left">POLS03SEC1A</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19106110007</td>
-<td align="left">HIST007</td>
-<td align="left">HIMADRI MUKHERJEE</td>
-<td align="left">History</td>
-<td align="left"><a href="mailto:himadrimukherjee@outlook.com" class="email">himadrimukherjee@outlook.com</a></td>
-<td align="left">HIST03SEC1A</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19213110050</td>
-<td align="left">MATH50</td>
-<td align="left">SUSNIGHDHA SAHA</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:susnighdhasaha601@gmail.com" class="email">susnighdhasaha601@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213220036</td>
-<td align="left">MATH036</td>
-<td align="left">SWARUPA PATRA</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:swarupapatrabarasat@gmail.com" class="email">swarupapatrabarasat@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19218210045</td>
-<td align="left">BIOS045</td>
-<td align="left">ANUSHKA TIWARI</td>
-<td align="left">Life Sciences</td>
-<td align="left"><a href="mailto:anushkatiwari1857@gmail.com" class="email">anushkatiwari1857@gmail.com</a></td>
-<td align="left">BIOS03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213110023</td>
-<td align="left">Math023</td>
-<td align="left">ARUNAVO GANGULY</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:arunavo.rbd@gmail.com" class="email">arunavo.rbd@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19213110009</td>
-<td align="left">MATH009</td>
-<td align="left">SHANTABRATA SAHA</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:shantajpg12@gmail.com" class="email">shantajpg12@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213220043</td>
-<td align="left">MATH043</td>
-<td align="left">PIYALI BISWAS</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:piyalibiswas34031@gmail.com" class="email">piyalibiswas34031@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19213110020</td>
-<td align="left">20</td>
-<td align="left">SHOURJA CHOWDHURY</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:shourjachowdhury569@gmail.com" class="email">shourjachowdhury569@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left">19213110045</td>
-<td align="left">MATH045</td>
-<td align="left">SOUMYADEEP CHAKRABORTY</td>
-<td align="left">Mathematics</td>
-<td align="left"><a href="mailto:soumyadeepc0@gmail.com" class="email">soumyadeepc0@gmail.com</a></td>
-<td align="left">MATH03SEC1</td>
-<td align="left">ECON03GE3A</td>
-</tr>
-<tr class="even">
-<td align="left">3</td>
-<td align="left">19103110027</td>
-<td align="left">27</td>
-<td align="left">ARITRA BANERJEE</td>
-<td align="left">English</td>
-<td align="left"><a href="mailto:jit.banerjee44@gmail.com" class="email">jit.banerjee44@gmail.com</a></td>
+<td align="left"><a href="mailto:itzaaheli14@gmail.com" class="email">itzaaheli14@gmail.com</a></td>
 <td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
