--- a/content/econ03ge3a/slides.html
+++ b/content/econ03ge3a/slides.html
@@ -1,5 +1,5 @@
 ---
-title: "Slides"
+title: " "
 author: "pravesh"
 date: "2021-08-25"
 output: html_document
@@ -8,6 +8,6 @@ output: html_document
 
 
 <ul>
-<li><a href="1.TheColonialLegacy.html">1. The Colonial Legacy</a></li>
-<li><a href="slides/2.GrowthAndDistributionRegimes.html">2. Growth and Distribution Regimes in India</a></li>
+<li><a href="1.TheColonialLegacy.html">1. The Colonial Legacy</a>{:target="_blank"}</li>
+<li><a href="2.GrowthAndDistributionRegimes.html">2. Growth and Distribution Regimes in India</a>{:target="_blank"}</li>
 </ul>
