--- a/content/econ03ge3a/slides/2.GrowthAndDistributionRegimes.html
+++ b/content/econ03ge3a/slides/2.GrowthAndDistributionRegimes.html
@@ -3120,7 +3120,7 @@ slide:not(.current) .plotly.html-widget{
 
 <slide class=""><hgroup><h2>Reference</h2></hgroup><article  id="reference">
 
-<p>Vamsi Vakulabharanam &amp; Rahul De (2016) <a href='2.GrowthAndDistributionRegimes/vamsi.pdf' title=''>Growth and Distribution Regimes in India after Independence</a>, The Round Table, 105:6, 621-640, DOI: 10.1080/00358533.2016.1246860</p>
+<p>Vamsi Vakulabharanam &amp; Rahul De (2016) <a href='slides/vamsi.pdf' title=''>Growth and Distribution Regimes in India after Independence</a>, The Round Table, 105:6, 621-640, DOI: 10.1080/00358533.2016.1246860</p>
 
 </article></slide><slide class=""><hgroup><h2>Introduction</h2></hgroup><article  id="introduction">
 
