--- a/content/econ03ge3a/slides.html
+++ b/content/econ03ge3a/slides.html
@@ -10,4 +10,5 @@ output: html_document
 <ul>
 <li><a href="1.TheColonialLegacy.html" target="_blank">1. The Colonial Legacy</a></li>
 <li><a href="2.GrowthAndDistributionRegimes.html" target="_blank">2. Growth and Distribution Regimes in India</a></li>
+<li><a href="3.growth-record-of-indian-economy.html" target="_blank">3. Growth Record of Indian Economy</a></li>
 </ul>
