--- a/public/econ03ge3a/slides/index.html
+++ b/public/econ03ge3a/slides/index.html
@@ -67,6 +67,7 @@
 <ul>
 <li><a href="1.TheColonialLegacy.html" target="_blank">1. The Colonial Legacy</a></li>
 <li><a href="2.GrowthAndDistributionRegimes.html" target="_blank">2. Growth and Distribution Regimes in India</a></li>
+<li><a href="3.growth-record-of-indian-economy.html" target="_blank">3. Growth Record of Indian Economy</a></li>
 </ul>
 
     </div>
